objects/TObject2__c.object
<CustomObject>
    <fields>
        <fullName>FairPrice__c</fullName>
        <label>FairPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tickets__c</fullName>
        <label>Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TravelsName__c</fullName>
        <label>TravelsName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>TObject2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TObject2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>